[package]
name = "hello_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.38", features = ["nightly", "span-locations"] }
quote = "1.0.18"
syn = {version = "1.0.91",features=["full","extra-traits"]}

[lib]
proc-macro = true
